# webapps

./: .gitignore  readme.md  webapps.sublime-project
calendar/src/: Main.elm
cvbuilder/: elm.json
cvbuilder/src/: Main.elm
elmplg/: elm.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
elmplg/src/: Api.elm  Main.elm  Monadster.elm  Storage.elm  bootstrap.js
elmplg/www/css/: common.css
elmplg/www/data/: shop.json
flashcard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
flashcard/src/: Main.elm  bootstrap.js
reactplg/: index.html  package-lock.json  package.json  vite.config.js
reactplg/src/: App.jsx  Draggable.jsx  FormState.jsx  Gallery.jsx  Interactivity.jsx  TicTacToe.css  TicTacToe.jsx  main.css  main.jsx
shopify/: elm.json  index.html  package.json  vite.config.js
shopify/src/: Main.elm  bootstrap.js  main.css
shopify/www/data/: products.json  user.json
tailwindplg/: index.html  package-lock.json  package.json  vite.config.js
tailwindplg/www/: card.html  plaincss.html  template.html
wasmplg/: Cargo.toml  index.html  package-lock.json  package.json  vite.config.js
wasmplg/src/: bootstrap.js  lib.rs  maths.rs  parser.rs  shader.rs
wasmplg/src/maths/: matrix.rs  utils.rs  vector.rs
webserver/: .dockerignore  .env  Cargo.toml  Dockerfile
webserver/migrations/: 20231110011403_initial_schema.sql  20231110024327_seed_data.sql
webserver/src/: lib.rs  main.rs  routes.rs
webserver/src/routes/: user_routes.rs
