[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
futures = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1", features = ["full"] }
